# swash

./: .envrc  .gitignore  .prettierrc  CLAUDE.md  CONTEXT.md  Makefile  Procfile  README.md  SHELL.md  VISION.md  agents.md  build.sh  busdap.py  busker  busker-mcp  busker-web.py  busker.py  busker_identity.py  busker_journal.py  claude.md  claude.py  claude.sh  deno.json  eventStore.js  flake.nix  go.mod  go.sum  go.work  index.css  index.html  index.js  index2.js  index3.js  lefthook.yml  main.go  main.py  mknew  package-lock.json  package.json  pyproject.toml  (+16 more)
.github/workflows/: ci.yml  opencode.yml
1/: audio.js  main.go  package-lock.json  package.json
1/static/: recording.js
2/: Makefile  go.mod  go.sum  main.go
2/static/: chatCompletion.js  index.css  index.html  index.js  typing.js
app/: index.js
cmd/mini-systemd/: journal.go  journal_socket.go  main.go  manager.go
cmd/oxigraph-poc/: main.go  oxigraph.wasm.zst
cmd/swash/: attach.go  context.go  graph.go  http.go  journald.go  main.go  minijournald.go  minisystemd.go  webui.go
cmd/swash-http/: main.go
cmd/swash-journald/: main.go
cmd/swash-server/: main.go
cmd/vterm-service/: main.go
cvendor/systemd/: sd-id128.h  sd-journal.h
integration/: graph_test.go  http_test.go  integration_test.go  webui_test.go
internal/attach/: attach.go
internal/backend/: backend.go  types.go
internal/cli/: constants.go  job.go  tty_attach.go  unix_client.go
internal/control/: control_plane.go
internal/dirs/: dirs.go
internal/eventlog/: combined.go  eventlog.go
internal/executor/: executor.go  fake.go
internal/graph/: client.go  server.go  service.go
internal/host/: executor.go  fake_executor.go  host.go  host_test.go  tty.go  tty_test.go  types.go  unix_server.go
internal/job/: constants.go  job.go  tty_attach.go  unix_client.go
internal/journal/: combined.go  daemon.go  fake.go  file.go  open_systemd.go  sdjournal.go  socket.go  types.go
internal/journald/: journald.go
internal/minisystemd/: journal.go  journal_socket.go  manager.go  run.go
internal/process/: types.go
internal/protocol/: protocol.go
internal/runtime/: runtime.go  types.go
internal/server/: server.go
internal/session/: constants.go  session.go  tty_attach.go  unix_client.go
internal/swash/: constants.go  control_plane.go  control_plane_dbus.go  (+17 more)
oxigraph-wasi-ffi/: Cargo.toml  DESIGN.md  README.md
oxigraph-wasi-ffi/src/: lib.rs
scm/: Makefile  index.html  reflect.js  snoot.js  snoot.scm  snoot.wasm  snoot2.scm
src/: TypeWriter.ts  chat.d.ts  chat.ts  css.ts  dank.ts  defn.ts  demo.ts  demo2.ts  demo3.ts  demo4.ts  graphemes.ts  harel.ts  host.ts  html.ts  kernel.ts  llm.ts  mind.ts  nest.ts  ntchat.ts  opus.d.ts  pong.ts  prompt.ts  server.ts  sock.ts  speech.ts  speechInput.ts  swash.ts  swash2.ts  sync.ts  sync2.ts  sync3.ts  tag.ts  talk.ts  talk2.ts  task.ts  telegram-client.ts  telegram-service.ts  telegram-web-client.js  telegram.ts  telegramClient.ts  (+7 more)
static/: chatCompletion.js  css.js  eventStore.js  index.css  index.html  index.js  kernel.js  ntchat.js  prompts.js  prose.html  questlog1.txt  recording.js  state.js  swash.2.js  swash.css  swash.html  swash2.html  tag.js  telegram-web-client.js  transcribing.js  typing.js
swa/: cal.go  credentials2.json  go.mod  go.sum  main.go  token.json
test/: integration.sh  integration_test.go
txt/: anthropic-tools.txt  bp.md  nest.html  nest2.html  prompt.md
vterm/: go.mod  go.sum  vterm_test.go
vterm-service/: fcft_wrapper.c  fcft_wrapper.h  flake.nix  meson.build  vterm-service.cpp
vterm-service/libvterm/: gen-all-includes.sh  gen-encoding.sh  meson.build
vterm-service/libvterm/src/: screen.c
(+103 files in other folders)
